# RGB-curves

./: .gitignore  CMakeLists.txt  README.md
assets/icon/: ColorForgeIcon.icns
data/effects/: color-range-correction.effect  hue-curves.effect  rgb-curves.effect
docs/: ROADMAP.md
installer/windows/: ColorForge.iss
scripts/: generate-release-icons.py  package-installer-mac.sh  package-installer-windows.ps1  package-release-mac.sh  package-release.ps1
src/: color_range_correction_editor_dialog.cpp  color_range_correction_editor_dialog.hpp  color_range_correction_filter.cpp  color_range_correction_filter.hpp  color_range_correction_types.hpp  curve_editor_dialog.cpp  curve_editor_dialog.hpp  curve_types.hpp  curve_widget.cpp  curve_widget.hpp  hue_curve_editor_dialog.cpp  hue_curve_editor_dialog.hpp  hue_curves_filter.cpp  hue_curves_filter.hpp  plugin-main.cpp  rgb_curves_filter.cpp  rgb_curves_filter.hpp  screen_color_picker.hpp  screen_color_picker_mac.mm  screen_color_picker_stub.cpp
src/compat/: obs-config.h  obsconfig.h
